img not showing fix

--- a/style.css
+++ b/style.css
@@ -241,11 +241,13 @@ body {
 }
 .real-img {
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
   width: 100%;
   display: block;
 }
-
+.real-img.loaded {
+  opacity: 1;
+}
 .fly-loader {
   width: 100%;
   display: block;
